syntax = "proto3";

package foodfolio.v1;

option go_package = "toxictoast/services/foodfolio-service/api/proto/foodfolio/v1;foodfoliov1";

import "google/protobuf/timestamp.proto";

// Common timestamp fields for all entities
message Timestamps {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp updated_at = 2;
  optional google.protobuf.Timestamp deleted_at = 3;
}

// Pagination request
message PaginationRequest {
  int32 page = 1;      // Page number (starting at 1)
  int32 page_size = 2; // Items per page (default: 20, max: 100)
}

// Pagination response
message PaginationResponse {
  int32 page = 1;
  int32 page_size = 2;
  int32 total_items = 3;
  int32 total_pages = 4;
}

// Common filter for soft-deleted items
message DeletedFilter {
  bool include_deleted = 1; // Include soft-deleted items
  bool only_deleted = 2;    // Only show deleted items
}

// Generic empty response
message Empty {}

// Generic success response
message SuccessResponse {
  bool success = 1;
  string message = 2;
}

// Generic ID request
message IdRequest {
  string id = 1;
}

// Generic IDs request (for batch operations)
message IdsRequest {
  repeated string ids = 1;
}
